logs-ubuntu-rcl/latest/rcl_yaml_param_parser/stdout_stderr.log
Not searching for unused variables given on the command line.
-- The C compiler identification is GNU 14.3.0
-- The CXX compiler identification is GNU 14.3.0
-- Detecting C compiler ABI info
-- Detecting C compiler ABI info - done
-- Check for working C compiler: /home/runner/work/pixi_rosdistro/pixi_rosdistro/.pixi/envs/default/bin/x86_64-conda-linux-gnu-cc - skipped
-- Detecting C compile features
-- Detecting C compile features - done
-- Detecting CXX compiler ABI info
-- Detecting CXX compiler ABI info - done
-- Check for working CXX compiler: /home/runner/work/pixi_rosdistro/pixi_rosdistro/.pixi/envs/default/bin/x86_64-conda-linux-gnu-c++ - skipped
-- Detecting CXX compile features
-- Detecting CXX compile features - done
-- Found ament_cmake_ros: 0.15.6 (/home/runner/work/pixi_rosdistro/pixi_rosdistro/install/share/ament_cmake_ros/cmake)
-- Found rcutils: 7.0.7 (/home/runner/work/pixi_rosdistro/pixi_rosdistro/install/share/rcutils/cmake)
-- Found rmw: 7.9.1 (/home/runner/work/pixi_rosdistro/pixi_rosdistro/install/share/rmw/cmake)
-- Found libyaml_vendor: 1.8.0 (/home/runner/work/pixi_rosdistro/pixi_rosdistro/install/share/libyaml_vendor/cmake)
-- Checking for module 'yaml-0.1'
--   Found yaml-0.1, version 0.2.5
-- Found yaml: 1
-- Found ament_lint_auto: 0.20.3 (/home/runner/work/pixi_rosdistro/pixi_rosdistro/install/share/ament_lint_auto/cmake)
-- Found gtest sources under '/home/runner/work/pixi_rosdistro/pixi_rosdistro/install/src/gtest_vendor': C++ tests using 'Google Test' will be built
-- Check if compiler accepts -pthread
-- Check if compiler accepts -pthread - yes
-- Found Threads: TRUE
-- Performance tests are disabled by default, so Google Benchmark tests will be skipped. To enable these tests, set the CMake variable 'AMENT_RUN_PERFORMANCE_TESTS'.
-- Added test 'copyright' to check source files copyright and LICENSE
-- Added test 'cppcheck' to perform static code analysis on C / C++ code
-- Configured cppcheck include dirs: /home/runner/work/pixi_rosdistro/pixi_rosdistro/install/include;$<BUILD_INTERFACE:/home/runner/work/pixi_rosdistro/pixi_rosdistro/src/ros2/rcl/rcl_yaml_param_parser/include>
-- Configured cppcheck exclude dirs and/or files: 
-- Added test 'cpplint' to check C / C++ code against the Google style
-- Configured cpplint exclude dirs and/or files: 
-- Added test 'lint_cmake' to check CMake code style
-- Added test 'uncrustify' to check C / C++ code style
-- Configured uncrustify additional arguments: 
-- Added test 'xmllint' to check XML markup files
-- Configuring done (2.0s)
-- Generating done (0.0s)
-- Build files have been written to: /home/runner/work/pixi_rosdistro/pixi_rosdistro/build/rcl_yaml_param_parser
[1/32] Generating rcl_yaml_param_parser/version.h
[2/32] Building C object CMakeFiles/rcl_yaml_param_parser.dir/src/add_to_arrays.c.o
[3/32] Building C object CMakeFiles/rcl_yaml_param_parser.dir/src/namespace.c.o
[4/32] Building C object CMakeFiles/rcl_yaml_param_parser.dir/src/node_params.c.o
[5/32] Building C object CMakeFiles/rcl_yaml_param_parser.dir/src/parse.c.o
FAILED: [code=1] CMakeFiles/rcl_yaml_param_parser.dir/src/parse.c.o 
sccache /home/runner/work/pixi_rosdistro/pixi_rosdistro/.pixi/envs/default/bin/x86_64-conda-linux-gnu-cc -DRCL_YAML_PARAM_PARSER_BUILDING_DLL -DRCUTILS_ENABLE_FAULT_INJECTION -DROS_PACKAGE_NAME=\"rcl_yaml_param_parser\" -Drcl_yaml_param_parser_EXPORTS -I/home/runner/work/pixi_rosdistro/pixi_rosdistro/src/ros2/rcl/rcl_yaml_param_parser/include -I/home/runner/work/pixi_rosdistro/pixi_rosdistro/build/rcl_yaml_param_parser/ament_generate_version_header/rcl_yaml_param_parser -isystem /home/runner/work/pixi_rosdistro/pixi_rosdistro/install/include/rcutils -isystem /home/runner/work/pixi_rosdistro/pixi_rosdistro/install/include/rmw -isystem /home/runner/work/pixi_rosdistro/pixi_rosdistro/install/include/rosidl_dynamic_typesupport -isystem /home/runner/work/pixi_rosdistro/pixi_rosdistro/install/include/rosidl_runtime_c -isystem /home/runner/work/pixi_rosdistro/pixi_rosdistro/install/include/rosidl_typesupport_interface -march=nocona -mtune=haswell -ftree-vectorize -fPIC -fstack-protector-strong -fno-plt -O2 -ffunction-sections -pipe -isystem /home/runner/work/pixi_rosdistro/pixi_rosdistro/.pixi/envs/default/include -O3 -DNDEBUG -fPIC -fvisibility=hidden -Wall -Wextra -Wpedantic -Wformat=2 -Wconversion -Wsign-conversion -MD -MT CMakeFiles/rcl_yaml_param_parser.dir/src/parse.c.o -MF CMakeFiles/rcl_yaml_param_parser.dir/src/parse.c.o.d -o CMakeFiles/rcl_yaml_param_parser.dir/src/parse.c.o -c /home/runner/work/pixi_rosdistro/pixi_rosdistro/src/ros2/rcl/rcl_yaml_param_parser/src/parse.c
/home/runner/work/pixi_rosdistro/pixi_rosdistro/src/ros2/rcl/rcl_yaml_param_parser/src/parse.c:809:2: error: #elif after #else
  809 | #elif defined(__APPLE__)
      |  ^~~~
/home/runner/work/pixi_rosdistro/pixi_rosdistro/src/ros2/rcl/rcl_yaml_param_parser/src/parse.c:792: error: the conditional began here
  792 | #ifdef _WIN32
/home/runner/work/pixi_rosdistro/pixi_rosdistro/src/ros2/rcl/rcl_yaml_param_parser/src/parse.c:819:2: error: #endif without #if
  819 | #endif
      |  ^~~~~
ninja: build stopped: subcommand failed.
